# f5-tts-service

./: .dockerignore  .env.example  .env.production.example  .gitignore  .upstream-pin  Dockerfile.prod  README.md  add_voice_direct.py  add_voice_to_db.py  admin_api.py  alembic.ini  analysis_logging.py  api_endpoints.py  api_endpoints_voice_enabled.py  app_factory.py  async_audio_converter.py  async_tts_engine.py  async_worker_manager.py  audio_converter.py  auth.py  background_tasks.py  backup_manager.py  celery_app.py  config.py  database.py  file_manager.py  gpu_config.py  gpu_integration.py  gpu_monitor.py  gpu_worker_pool.py  health_api.py  logging_config.py  main.py  migrate_add_is_global.py  models.py  monitoring.py  prometheus_metrics.py  pyproject.toml  requirements-ci.txt  requirements-gpu.txt  (+10 more)
.github/workflows/: ci.yml
TTS_rus_engine/: date_converter.py  money_converter.py  number_converter.py  russian_tts.py  time_converter.py  yoficator_module.py
alembic/: env.py
alembic/versions/: 20260225_0001_init_tts_schema.py  20260225_0002_indexes_constraints.py
app/: __init__.py  audio_processing.py  auth.py  config.py  limits_store.py  limits_store_postgres.py  main.py  schemas.py  synthesis_context.py  transcriber.py  voice_store.py  voice_store_postgres.py  voice_uploads.py
deploy/: docker-compose.advanced.yml  docker-compose.simple.yml
docs/: API_CONTRACT.md  DEPLOYMENT.md  README.md  RUNBOOK.md
routers/: __init__.py  media.py  synthesis.py  system.py  users.py
scripts/: migrate_file_state_to_postgres.py  pin_upstream.ps1
tests/: __init__.py
(+15 files in other folders)
